compiler-core/src/parse/snapshots/gleam_core__parse__tests__invalid_label_shorthand_3.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n  wibble(:arg)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  wibble(:arg)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:10
  │
3 │   wibble(:arg)
  │          ^ I was not expecting this

Found `:`, expected one of: 
- `)`
