compiler-core/src/parse/snapshots/gleam_core__parse__tests__invalid_pattern_label_shorthand.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n  let Wibble(:) = todo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let Wibble(:) = todo
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:14
  │
3 │   let Wibble(:) = todo
  │              ^ I was not expecting this

Found `:`, expected one of: 
- `)`
